# fraud_risk_platform

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  verify_setup.sh
benchmarks/: load_test.js  results.txt
docs/: ARCHITECTURE.md  SETUP_GUIDE.md
infra/athena/: create_table.sql  sample_queries.sql
infra/aws/: 01_ecr.sh  02_s3.sh  03_push_images.sh  04_setup_irsa.sh  05_deploy_to_ec2.sh  06_setup_athena.sh  99_cleanup.sh  check_cluster_status.sh  eks-cluster.yaml
infra/k8s/: canary_infer_canary.yaml  canary_infer_service.yaml  canary_infer_stable.yaml  canary_virtualservice.yaml  deploy_featurizer.yaml  deploy_infer.yaml  deploy_ingest.yaml  hpa_infer.yaml  hpa_ingest.yaml  namespace.yaml  redis_helm_values.yaml  sa_irsa.yaml
infra/observability/: grafana-dashboard.json  prometheus.yml
notebooks/: 01_data_preprocessing.ipynb  02_model_training.ipynb
services/featurizer/: Dockerfile  __init__.py  app.py  requirements.txt
services/infer/: Dockerfile  __init__.py  app.py  feature_vector.py  model_metadata.json  reasons.py  requirements.txt
services/ingest/: Dockerfile  __init__.py  app.py  requirements.txt  s3_writer.py  schemas.py
services/ingest/tests/: __init__.py  test_app.py
