[tool.poetry]
name = "streamlite-inference"
version = "0.1.0"
description = "Real-time fraud risk scoring platform"
authors = ["Narendra <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
redis = "^5.0.1"
pyarrow = "^15.0.0"
pandas = "^2.1.4"
torch = "^2.2.0"
scikit-learn = "^1.4.0"
boto3 = "^1.34.0"
prometheus-client = "^0.19.0"
python-multipart = "^0.0.6"
httpx = "^0.26.0"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
pytest-cov = "^4.1.0"
black = "^23.12.1"
ruff = "^0.1.9"
mypy = "^1.8.0"
jupyter = "^1.0.0"
ipykernel = "^6.28.0"
locust = "^2.20.0"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["services"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
